# ws_xsarm

./: .gitignore  README.md  walliV2walli_arm_base_linkclaw_5000_1.000000_1.000000.ikcache
src/arm_interfaces/: CMakeLists.txt  package.xml
src/arm_interfaces/action/: Enable.action  Execute.action  Plan.action  Shutdown.action
src/arm_interfaces/srv/: RTCommand.srv
src/arm_test/: CMakeLists.txt  package.xml
src/arm_test/config/: arm_rt_server_config.yaml  arm_rt_server_walli_config.yaml  servo_config.yaml  servo_walli_config.yaml
src/arm_test/include/arm_test/: arm_planning_server.hpp  arm_rt_server.hpp  arm_server.hpp
src/arm_test/launch/: armrt.launch.py  armrt_walli.launch.py  armserver.launch.py  servo.launch.py  test.launch.py
src/arm_test/src/: arm_keyboard.cpp  arm_planning_server.cpp  arm_rt_server.cpp  arm_server.cpp  arm_server_si.cpp  servo_node.cpp  test.cpp
src/tools/: arm_tui.py
src/walli_description/: CMakeLists.txt  package.xml
src/walli_description/urdf/: walliV2.urdf
src/walli_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/walli_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  ros2_controllers.yaml  walliV2.ros2_control.xacro  walliV2.srdf  walliV2.urdf.xacro
src/walli_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
